# Solder-Reflow-Oven

./: .clang-format  .clangd  .gitignore  ARCHITECTURE_DIAGRAMS.md  AUTO_TUNE_FEATURE.md  BUGFIX_PRESET_FIELDS.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLANGD_WIFI_FIX.md  CLION_CLANGD_FIX.md  CLION_SETUP.md  CMakeLists.txt  DOCUMENTATION_INDEX.md  EEPROM_FIX_SUMMARY.md  ESP8266_REMOVAL_COMPLETE.md  ESP8266_SETUP.md  EXAMPLE_CONFIGURATIONS.md  FINAL_DIAGNOSIS.md  GPIO_PIN_MAPPING.md  IMPLEMENTATION_SUMMARY.md  LED_STATUS_GUIDE.md  MIGRATION_SUCCESS.md  MIGRATION_SUMMARY.md  PICO_W_MIGRATION_GUIDE.md  PID_TUNING_GUIDE.md  PIN_CHANGE_SUMMARY.md  PLATFORMIO_MIGRATION.md  PLATFORMIO_PICO_UPDATE.md  PLATFORMIO_QUICKREF.md  PLATFORM_COMPARISON.md  PRESET_IMPLEMENTATION_SUMMARY.md  PRESET_LOADING_FIX.md  PRESET_UI_GUIDE.md  PROBLEM_SOLVED.md  QUICK_FIX_GUIDE.md  QUICK_MIGRATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_GUIDE.md  (+10 more)
Documentation/: CAPTIVE_PORTAL_TROUBLESHOOTING.md  CHANGELOG.md  ESP8266_SETUP.md  HARDWARE_TROUBLESHOOTING.md  PID_AUTOTUNE_LIBRARY_GUIDE.md  PLATFORMIO_SETUP.md  PRESET_JEDEC_UPDATE.md  PRESET_PROFILES_FEATURE.md  PRESET_QUICK_START.md  PROJECT_SETUP_SUMMARY.md  QUICK_REF.md  README_PLATFORMIO.md  REFLOW_TEMPERATURE_STANDARDS.md  WIFI_STORAGE_IMPROVEMENTS.md
archive/: SolderReflowOven_ESP8266.ino.deprecated
backup/: main_old.cpp
src/: config.h  led_control.cpp  led_control.h  main.cpp  ota.cpp  ota.h  pid_controller.cpp  pid_controller.h  pins.h  presets.cpp  presets.h  state_machine.cpp  state_machine.h  storage.h  (+8 more)
(+13 files in other folders)
